packages/lang/test/__golden__/errors/retry-honoring-unknown-header.txt
error[TF010]: `retry honoring` doesn't support "X-RateLimit-Reset"
 --> retry-honoring-unknown-header.tflw:3:20
  |
3 |     retry honoring "X-RateLimit-Reset" up to 3
  |                    ^^^^^^^^^^^^^^^^^^^
  |
  = help: expected one of: Retry-After
